--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -25,7 +25,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 } */
 .bg-cont {
-  background-image: url('../Assets/back.png');
+  background-image: url('../Assets/1.png');
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
